--- a/app/templates/reddit_articles.html
+++ b/app/templates/reddit_articles.html
@@ -102,7 +102,7 @@
                 <div class="article-date">{{ article.date.strftime('%B %d, %Y') }}</div>
                 {% endif %}
                 <div class="snippet">{{ article.snippet | safe }}</div>
-                <a href="/reddit-articles/articles/{{ article.filename }}" class="read-link" target="_blank"
+                <a href="/all-articles/articles/{{ article.filename }}" class="read-link" target="_blank"
                     aria-label="Read full article: {{ article.title }}">
                     Read Full Article &rarr;
                 </a>
