--- a/app/templates/single_article.html
+++ b/app/templates/single_article.html
@@ -104,7 +104,7 @@
 
 <body>
     <div class="container">
-        <a class="back-link" href="{{ url_for('reddit_articles.published_articles') }}">← Back to All Articles</a>
+        <a class="back-link" href="{{ url_for('all-articles.published_articles') }}">← Back to All Articles</a>
         <h1 class="article-title">{{ title }}</h1>
         {% if date %}
         <div class="article-meta">{{ date.strftime('%B %d, %Y') }}</div>
