--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -102,7 +102,7 @@
             <!-- <a id="discussion-link" href="#" target="_blank" style="display: none;" class="btn btn-outline-info btn-sm">See Original Discussion</a> -->
         </section>
         <div class="text-center">
-            <a href="/reddit-articles/articles" class="btn btn-outline-dark btn-lg mt-2">
+            <a href="/all-articles/articles" class="btn btn-outline-dark btn-lg mt-2">
                 Explore All Published Articles
             </a>
         </div>
