--- a/app/templates/single_article.html
+++ b/app/templates/single_article.html
@@ -99,6 +99,20 @@
             margin-bottom: 28px;
             font-size: 1.06rem;
         }
+
+        .article-content strong {
+            color: #1845a3;
+            font-weight: 700;
+        }
+
+        .article-content .faq-q {
+            margin-top: 16px;
+            margin-bottom: 6px;
+        }
+
+        .article-content .faq-a {
+            margin-bottom: 22px;
+        }
     </style>
 </head>
 
