--- a/app/templates/single_article.html
+++ b/app/templates/single_article.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="{{ meta_description or (content[:160] if content else '') }}">
     <meta property="og:type" content="article">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="canonical" href="https://therealroundup.com/" />
     <style>
         body {
             background: #f6f4ed;
